--- a/jqueryMobile/www/index.html
+++ b/jqueryMobile/www/index.html
@@ -42,7 +42,7 @@
                         <a data-role="button" data-corners="false" class='button' href="#login" >
                             Sign In with Email
                         </a>
-                        <a data-role="button" id="btn_fblogin" data-corners="false" class='button' onclick="facebook.login()">
+                        <a data-role="button" id="btn_fblogin" data-corners="false" class='button' onClick="facebook.login()">
                             Sign In with Facebook
                         </a>
                         <hr>
@@ -70,7 +70,7 @@
                     <label for="checkbox" class="checkBG"></label>
                     Show Password
                 </label>
-                <span><button id="signin" class="button" onclick="utility.validatingLoginField('loginfields', 'edit-profile-page')" data-corners="false">Sign In</button></span>
+                <span><button id="signin" class="button" onClick="utility.validatingLoginField('loginfields', 'edit-profile-page')" data-corners="false">Sign In</button></span>
                 <span><a data-role="button" data-corners="false" class='button' href="#forgotpasswordpage"  >Forgot Password</a></span>
             </div>
         </div>
@@ -87,7 +87,7 @@
                     <label id="forgotlabel">Please enter your registered email id and click reset password. An email shall be sent to your registered email id with the new password.</label>
                     <input id="email" name="forgot_email" type="email" data-error="Please enter valid email" placeholder="Email" class="vemail">
                     <div id="err_frgtpwd" style="color: #F12C2C;"></div>
-                    <span><button id="forgot_password" class="button"  data-corners="false" onclick="utility.validatingResetPassword('forgotpasswordpage', 'login')">Reset Password</button></span>
+                    <span><button id="forgot_password" class="button"  data-corners="false" onClick="utility.validatingResetPassword('forgotpasswordpage', 'login')">Reset Password</button></span>
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
                     I agree to <a id="clab" data-theme='b'>data integrity</a>
                 </label>
 
-                <span><button class="button" id="signup_submit" data-corners="false" onclick="utility.validatingRegistartion('registeruser', 'login', true)">Sign Up</button></span>
+                <span><button class="button" id="signup_submit" data-corners="false" onClick="utility.validatingRegistartion('registeruser', 'login', true)">Sign Up</button></span>
             </div>
 
             <div data-role="popup" id="verifydialog" class="ui-content" style="max-width:800px;width:400px;" data-dismissible="false">
@@ -157,7 +157,7 @@
         <!-- Edit profile screen -->
         <div data-role="page" id="edit-profile-page">
             <div data-role="header" class="header" data-theme="none"  id="headereditp" >
-                <span class="menuicon" onclick="utility.openPanel('editprofilepanel')"></span>
+                <span class="menuicon" onClick="utility.openPanel('editprofilepanel')"></span>
                 Edit Profile
                 <span id="msgspan"></span>
             </div>
@@ -178,7 +178,7 @@
                         <fieldset data-role="controlgroup" data-type="horizontal" class="editfieldset" id="datefieldset">
                             <span>
                                 <select  name="date" class="input" id="dy" data-role="none"></select>
-                                <select  name="month" class="input"  id="mt" onchange="datepick.prototype.populate();" data-role="none">
+                                <select  name="month" class="input"  id="mt" onChange="datepick.prototype.populate();" data-role="none">
                                     <option value="1">Jan</option>
                                     <option value="2">Feb</option>
                                     <option value="3">Mar</option>
@@ -193,7 +193,7 @@
                                     <option value="12">Dec</option>
 
                                 </select>
-                                <select  name="year" class="input" id="yr" onchange="datepick.prototype.populate();" data-role="none"></select>
+                                <select  name="year" class="input" id="yr" onChange="datepick.prototype.populate();" data-role="none"></select>
                             </span>
                         </fieldset>     
                     </div>
@@ -264,7 +264,7 @@
                         </fieldset>
                     </div> 
 
-                    <button id="saveprofileinfo" name="submit" class="button signup" onclick="utility.validatingeditprofile('editprofilecontent', 'viewprofile', true)">Save</button>
+                    <button id="saveprofileinfo" name="submit" class="button signup" onClick="utility.validatingeditprofile('editprofilecontent', 'viewprofile', true)">Save</button>
 
 
                 </div>
@@ -276,9 +276,9 @@
 
 
                 <label>Take Photograph</label>
-                <button onclick="capturePhoto();" class="button">Capture Photo</button>
+                <button onClick="capturePhoto();" class="button">Capture Photo</button>
                 <br>
-                <button onclick="getPhoto();" class="button">From Photo Album</button>
+                <button onClick="getPhoto();" class="button">From Photo Album</button>
                 <br>
                 <a  data-role='button'  class='okButton' >Close</a>
                 <br> 
@@ -300,7 +300,7 @@
         <!-- View profile screen -->
         <div data-role="page" id="viewprofile">
             <div data-role="header" id="vpheader" class="header"  data-theme="none">
-                <span class="menuicon" onclick="utility.openPanel('popupPanel')"></span>My Profile</div>
+                <span class="menuicon" onClick="utility.openPanel('popupPanel')"></span>My Profile</div>
             <div role="main" class="ui-content" data-iscroll="">
                 <div class="userdata">
                     <img id="userimg">
@@ -331,8 +331,8 @@
             <div data-role="content">
                 <div class="box">
                     <canvas id="panel"></canvas>
-                    <button id="cropbtn" onclick="cropimg()" class="button">Load Photo</button>
-                    <button id="cropresult" onclick="getResults()" class="button">Crop Photo</button>
+                    <button id="cropbtn" onClick="cropimg()" class="button">Load Photo</button>
+                    <button id="cropresult" onClick="getResults()" class="button">Crop Photo</button>
                 </div>
             </div>
         </div>
@@ -340,7 +340,7 @@
 
         <div data-role="page" id="logdream">
             <div data-role="header" id="ldheader" class="header"  data-theme="none" >
-                <span class="menuicon" onclick="utility.openPanel('popupPanellogdream')"></span>Who I dreamt of</div>
+                <span class="menuicon" onClick="utility.openPanel('popupPanellogdream')"></span>Who I dreamt of</div>
             <div role="main" class="ui-content">
                 <div data-role="fieldcontain">
                     <label for="privacy">Dream Visible to</label>
@@ -431,20 +431,20 @@
         </div><!-- Log Dream page end here -->
 
 
-        <div data-role="page" id="whodreamtofmepage" >
+        <div data-role="page" id="whodreamtofmepage" data-iscroll=''>
             <!--div data-role="header" data-position="fixed" id="Whodreamthead" class="header"  data-theme="none" >
                  <span class="menuicon"></span>Who dreamt of me</div>-->
             <div data-role="header" class="header" data-theme="none"  id="Whodreamthead" >
                 <span class="menuicon" ></span>
-                Edit Profile
-                <span id="msgspan"></span>
+                Who dreamt of me
+                <span class="msgspan"></span>
             </div>
             <div data-role="content" >
 
                 <div class="who_dreams_me_datatdiv" >
-                    <div class="example-wrapper" data-iscroll>
-                        <ul data-role="listview">
-                            <li>
+                    <div class="example-wrapper" >
+                        <ul data-role="listview" id='whoidreamtlist'>
+                           <!-- <li>
                                 <div class="main_tab_div main_tab_div_active">
                                     <div class="user_profile_img">
                                         <img src="img/image boy.png">
@@ -1829,7 +1829,7 @@
                                         <a href="#" class="thum_btn_icon_active"></a>
                                     </div>
                                 </div>
-                            </li>
+                            </li>-->
                         </ul>
                     </div> 
                 </div> 
